--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "setting up react/webpack/babel",
   "main": "index.js",
   "scripts": {
+    "build": "yarn webpack -p",
     "yarn": "yarn add",
     "start": "yarn webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
